<resources>
    <string name="web_url">http://59.110.5.164/buyService/service?</string>
    <string name="app_name">Boss团</string>
    <string name="baidulocation_name">baidu map</string>
    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="goods">资源</string>
    <string name="business">服务商</string>
    <string name="news">通知消息</string>
    <string name="found">发现</string>
    <string name="personal_center">个人中心</string>
    <string name="contentDescription">下划线</string>
    <string name="location">定位</string>
    <string name="no_data">没有找到符合条件的数据</string>
    <string name="default_pic">default_pic</string>
    <string name="action_bar_edit">编辑</string>
    <string name="action_bar_star">头条收藏</string>
    <string name="action_bar_shop_star">商家收藏</string>
    <string name="action_bar_message_del">删除通知消息</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_submit">提交</string>
    <string name="btn_findpwd">找回密码？</string>
    <string name="btn_register_immediately">立即注册</string>
    <string name="btn_order">我的订单</string>
    <string name="btn_shopcar">购物车</string>
    <string name="btn_commodity_fav">产品收藏</string>
    <string name="btn_news_fav">头条收藏</string>
    <string name="btn_shop_fav">商家收藏</string>
    <string name="personal_no_login_toast">请您先登陆</string>
    <string name="order_del">删除订单</string>
    <string name="order_assess">评价</string>
    <string name="order_charge">立即支付</string>
    <string name="top_search_commodity">请输入产品名称或关键字</string>
    <string name="top_search_shop">请输入服务商名称或关键字</string>
    <string name="top_search_all">搜索你要找的资源、服务、人脉</string>
    <string name="home_item_price">%1$f元</string>
    <string name="service_error_hint">网络请求失败了，请重试...</string>
    <string name="service_error_but">点击重试</string>
    <string name="order_is_empty">您还没有相关订单！</string>
    <string-array name="personal_setting">
        <item>我的钱包</item>
        <item>BOSS券</item>
        <item>购物车</item>
    </string-array>
    <string-array name="personal_setting_icons">
        <item>@drawable/ic_personal_pack</item>
        <item>@drawable/ic_personal_bosstick</item>
        <item>@drawable/ic_personal_care</item>
    </string-array>
    <string-array name="personal_setting_order">
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>退款订单</item>
    </string-array>
    <string-array name="personal_order_icons">
        <item>@drawable/ic_setting_pay</item>
        <item>@drawable/ic_setting_send</item>
        <item>@drawable/ic_setting_take</item>
        <item>@drawable/ic_setting_comment</item>
        <item>@drawable/ic_setting_back</item>
    </string-array>
    <string-array name="personal_setting_follow">
        <item>已关注</item>
        <item>已收藏</item>
        <item>已订阅</item>
    </string-array>
    <string-array name="personal_follow_icons">
        <item>@drawable/ic_follow_fo</item>
        <item>@drawable/ic_follow_comment</item>
        <item>@drawable/ic_follow_subscribe</item>
    </string-array>
    <string-array name="personal_service">
        <item>管理服务</item>
        <item>已售订单</item>
        <item>VIP服务</item>
        <item>名片设置</item>
        <item>谁看过我</item>
    </string-array>
    <string-array name="personal_service_icons">
        <item>@drawable/ic_service_manger</item>
        <item>@drawable/ic_service_sale</item>
        <item>@drawable/ic_service_vip</item>
        <item>@drawable/ic_service_speed</item>
        <item>@drawable/ic_service_scan</item>
    </string-array>
    <string-array name="personal_manger">
        <item>实名认证</item>
        <item>企业认证</item>
        <item>职业认证</item>
        <item>芝麻信用</item>
        <item>保证金</item>
    </string-array>
    <string-array name="personal_manger_icons">
        <item>@drawable/ic_manger_id_gray</item>
        <item>@drawable/ic_manger_company_gray</item>
        <item>@drawable/ic_manger_job_gray</item>
        <item>@drawable/ic_manger_sesame_gray</item>
        <item>@drawable/ic_manger_ensure_gray</item>
    </string-array>
    <string-array name="personal_other">
        <item>建议反馈</item>
        <item>联系客服</item>
        <item>检查更新</item>
        <item>邀请好友</item>
        <item>清除缓存</item>
        <item>关于我们</item>
    </string-array>
    <string-array name="personal_other_icons">
        <item>@drawable/ic_other_idea</item>
        <item>@drawable/ic_other_custom</item>
        <item>@drawable/ic_other_check</item>
        <item>@drawable/ic_other_invitation</item>
        <item>@drawable/ic_other_clear</item>
        <item>@drawable/ic_other_about</item>
    </string-array>
    <string-array name="relase_head">
        <item>约单</item>
        <item>转让</item>
    </string-array>
    <string-array name="relase_head_icon">
        <item>@drawable/ic_relase_head_1</item>
        <item>@drawable/ic_relase_head_2</item>
    </string-array>
    <string-array name="relase_tag">
        <item>需求</item>
        <item>交换</item>
        <item>招标</item>
        <item>租赁</item>
        <item>合作</item>
        <item>共享</item>
        <item>免费</item>
    
 </string-array>
 <string-array name="relase_tag_icon">
     <item>@drawable/ic_relase_tag_1</item>
     <item>@drawable/ic_relase_tag_2</item>
     <item>@drawable/ic_relase_tag_3</item>
     <item>@drawable/ic_relase_tag_4</item>
     <item>@drawable/ic_relase_tag_5</item>
     <item>@drawable/ic_relase_tag_6</item>
     <item>@drawable/ic_relase_tag_7</item>
     <item>@drawable/ic_relase_tag_8</item>


 </string-array>
    <string-array name="tab_founds_tag">
        <item>全部</item>
        <item>约单</item>
        <item>转让</item>
        <item>需求</item>
        <item>交换</item>
        <item>招标</item>
        <item>众帮</item>
        <item>租赁</item>
        <item>合作</item>
        <item>共享</item>
        <item>免费</item>
    
</string-array>
    <string-array name="tab_bill_tag">
        <item>全部</item>
        <item>收入</item>
        <item>支出</item>
    </string-array>
    <string-array name="tab_tag">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        
    </string-array>
    <string-array name="order_details">
        <item>全部</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
    </string-array>
    <string-array name="seller_order_details">
        <item>全部</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
        <item>退款</item>
    </string-array>
    <string name="apply_refund_order_reason">请输入退款理由...</string>
    <string name="apply_refund_order_app_reason">请输入申诉理由...</string>
    <string name="apply_refund_order_reduse_reason">请输入拒绝退款理由...</string>
    <string name="business_item_distance">&lt;%1$s</string>
    <string name="business_item_score">评分  %1$s</string>
    <string name="business_item_talknum">%1$s评价</string>
    <string name="business_store_phone">电话：%1$s</string>
    <string name="business_store_address">地址：%1$s</string>
    <string name="home_item_score">好评：%1$s分</string>
    <string name="goods_detail_good_score">好评(%1$s)</string>
    <string name="goods_detail_medium_score">中评(%1$s)</string>
    <string name="goods_detail_bad_score">差评(%1$s)</string>
    <string name="home_item_salenum">已售[%1$s]</string>
    <string name="home_item_proSurplus">仅剩[%1$s]</string>
    <string name="goods_group_proSurplus">（库存%1$s件）</string>
    <string name="goods_details_time_work">工作时间：%1$s至%2$s（早%3$s-晚%4$s）</string>
    <string name="baidumap_normal">普通</string>
    <string name="baidumap_following">跟随</string>
    <string name="baidumap_compass">罗盘</string>
    <string name="goodsdeatil_addcart">购物车</string>
    <string name="goodsdeatil_buy">立即购买</string>
    <string name="goodsdeatil_store">私聊</string>
    <string name="goodsdeatil_star">名片</string>
    <string name="goodsdetail_call">留言</string>
    <string name="click_oncemore_exit">亲，再按一次就要真的要离开我了</string>
    <string name="goodsdetail_count">月销%1$s笔</string>
    <string name="goodsdetail_title1">详细</string>
    <string name="goodsdetail_title2">规格参数</string>
    <string name="goodsdetail_title3">评价</string>
    <string name="search_flag_all">搜索产品或服务商</string>
    <string name="search_flag_commodity">搜索产品</string>
    <string name="search_flag_shop">搜索服务商</string>
    <string name="news_content1">推荐</string>
    <string name="news_content2">人气</string>
    <string name="news_content3">最新</string>
    <string name="news_content4">附近</string>
    <string name="login_user">用户名：</string>
    <string name="login_authcode">验证码：</string>
    <string name="hint_authcode">请输入验证码</string>
    <string name="hint_inviteCode">请输入好友邀请码(可不填)</string>
    <string name="hint_inviteCode_2">邀请码由6位数字,大写字母组成</string>
    <string name="login_send_authcode">验证码</string>
    <string name="login_user_hint">请输入您的手机号</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="login_pwd_again_hint">请再次输入您的密码</string>
    <string name="login_pwd">密码：</string>
    <string name="modify_pwd">新密码：</string>
    <string name="login_pwd_again">确认密码：</string>
    <string name="login_pwd_error">密码不符合要求(6~20位数字或字母)</string>
    <string name="register_pwd_error">两次密码不一致，请重新输入</string>
    <string name="personal_usericon">头像</string>
    <string name="personal_username">用户名</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_score">我的积分</string>
    <string name="personal_safe">账户安全</string>
    <string name="personal_safe_hint">可修改密码</string>
    <string name="personal_address">收货地址管理</string>
    <string name="personal_exit">注销用户</string>
    <string name="myorder_detail_wl">查看物流信息</string>
    <string name="personal_modify">修改个人信息</string>
    <string name="personal_email_mobile_check">请输入正确的手机号码!</string>
   <string name="personal_modify_usericon">点击查看个人信息</string>
   <string name="personal_item_modifypwd">亲!请先登陆</string>
   <string name="modify_pwd_error">服务器异常，请重新登陆!</string>
   <string name="try_again">稍后再试</string>
   <string name="modify_icon_dialog_title">选择照片</string>
   <string name="modify_progress_title">更新个人信息</string>
   <string name="modify_progress_message">请稍后 &#8230;</string>
   <string name="modify_failure">服务器异常，更新失败!</string>
   <string name="login_progress_title">Boss团登陆中...</string>
   <string name="register_progress_title">Boss团注册中...</string>
   <string name="city_progress_title">Boss团获取城市信息中...</string>
   <string name="news_progress_title">资讯</string>
   <string name="news_progress_message">加载中...</string>
   <string name="login_failure">登录失败!请稍后再试</string>
   <string name="register_failure">注册失败!请稍后再试</string>
   <string name="failure">服务器异常，请稍后重试</string>
   <string name="city_change_title">切换城市</string>
   <string name="user_address_name">收货人：</string>
   <string name="user_address_address">收货地址：</string>
   <string name="user_address_postcode">邮编：</string>
   <string name="user_address_phone">联系电话：</string>
   <string name="user_address_default">一键设为默认地址</string>
   <string name="user_address_del">删除</string>
   <string name="user_address_save">保存</string>
    <string name="register_code_wrong">验证码不对哟,请再试一次</string>
    <string name="register_password_hint">密码由6-20位英文字母、数字符号组成</string>
    <string name="register_agreement">《Boss团使用协议》</string>
    <string name="register_agreement1">注册即表示同意</string>
    <string name="account_safe">账号安全</string>
    <string name="personal_data">个人资料</string>
    <string name="address_management">地址管理</string>
    <string name="tv_phone_num_hint">请输入手机号码</string>
    <string name="password_wrong">密码错误</string>
</resources>