<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/app_input_shape"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_name"
            android:textSize="@dimen/home_item_title" />

        <EditText
            android:id="@+id/id_user_address_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/app_input_shape"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_address"
            android:textSize="@dimen/home_item_title" />

        <EditText
            android:id="@+id/id_user_address_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/app_input_shape"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_phone"
            android:textSize="@dimen/home_item_title" />

        <EditText
            android:id="@+id/id_user_address_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:inputType="phone"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/app_input_shape"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_postcode"
            android:textSize="@dimen/home_item_title" />

        <EditText
            android:id="@+id/id_user_address_postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:gravity="right"
            android:inputType="number"
            android:maxLength="8"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/app_input_shape"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/user_address_default"
            android:textSize="@dimen/home_item_title" />

        <CheckBox
            android:id="@+id/id_user_address_default"
            style="@style/CustomCheckboxTheme"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            android:layout_marginLeft="30dp" />

        <!--
        <com.jiesai.ljp.switchview.SwitchView
            android:id="@+id/id_user_address_default"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            app1:container_Hight="36dp"
            app1:container_Width="72dp"
            app1:cursor_Hight="36dp"
            app1:cursor_Width="36dp"
            app:textFalse="否"
            app:textTrue="是" >
        </com.jiesai.ljp.switchview.SwitchView>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/id_user_address_del"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/app_btn_enabled_shape"
            android:padding="8dp"
            android:text="@string/user_address_del"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/id_user_address_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/app_btn_enabled_shape"
            android:padding="8dp"
            android:text="@string/user_address_save"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>