<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/id_updateuserinfo_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_app_findpwd_user"/>

        <Button
            android:id="@+id/id_updateuserinfo_findpwd_send_authcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/app_btn_enabled_shape"
            android:padding="8dp"
            android:text="@string/login_send_authcode"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/id_updateuserinfo_findpwd_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/id_updateuserinfo_findpwd_send_authcode"
            android:layout_toRightOf="@id/id_updateuserinfo_txt1"
            android:background="@null"
            android:hint="@string/login_user_hint"
            android:textColorHint="@color/gray" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/id_updateuserinfo_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_marginRight="5dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_app_findpwd_auth"/>

        <EditText
            android:id="@+id/id_updateuserinfo_findpwd_authcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_updateuserinfo_txt2"
            android:background="@null"
            android:hint="@string/hint_authcode" />
    </RelativeLayout>

    <Button
        android:id="@+id/id_updateuserinfo_findpwd_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="8dp"
        android:textSize="18sp"
        android:background="@drawable/app_btn_enabled_shape"
        android:textColor="@color/white"
        android:text="@string/btn_submit" />

</LinearLayout>